verify the student and print his/her certificate. (Set 'certificate_status = true) and save it into DB.so it mean that the certificate of student is downloaded/printed...

--- a/src/main/resources/static/CSS/certificate.css
+++ b/src/main/resources/static/CSS/certificate.css
@@ -100,5 +100,8 @@ main {
         .download {
             display: none;
         }
+
+        margin-top: -3rem;
+        font-size:large;
     }
 }
