--- a/src/main/resources/templates/Certificate/certificate.html
+++ b/src/main/resources/templates/Certificate/certificate.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificate</title>
-    <link rel="stylesheet" href="./certificate.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" th:href="@{/CSS/certificate.css}">
+    <link rel="stylesheet" th:href="@{/FragmentsCSS/Fragments.css}">
 </head>
 
 <body>
     <main>
         <div class="certificate-wrapper">
             <figure>
-                <img src="./certificate-bg.jpg" alt="Certificate Image">
+                <img th:src="@{/Images/certificate-bg.jpg}" alt="Certificate Image">
                 <article>
-                    <h1>C & C++ Language</h1>
-                    <p>Completed By <b>Sarthak Parulekar</b> From <b>24/04/2024</b> to <b>30/05/2024</b> With Good
+                    <h1 th:text="${obj.course}"></h1>
+                    <p>Completed By <b th:text="${obj.name}"></b> From <b th:text="${obj.strating_date}"></b> to <b
+                            th:text="${obj.ending_date}"></b> With Good
                         Proficiency Achievement.</p>
                     <p>Congratulations On a Job Well Done!</p>
                     <footer>
                         <div class="date-of-issue">
-                            <b>01-04-2024</b>
+                            <b th:text="${obj.date_of_issue}"></b>
                             <p class="text">Date of Issue</p>
                         </div>
                         <div class="signature">
-                            <img src="" alt="Signature">
+                            <p alt="Signature-Photo"></p><br>
                             <p>Authorized Signatory</p>
                         </div>
                     </footer>
                 </article>
             </figure>
         </div>
-        <button class="download" onclick=window.print()>Download</button>
+
+        <div th:if="${obj.certificate_status}">
+            <button class="download" onclick=window.print()>Download</button>
+        </div>
+
+        <div th:unless="${obj.certificate_status}">
+            <h1 style="text-align: center;">Click here to verify </h1><br>
+            <a th:href="@{/verify/{ty}/{id} (id=${obj.id},ty=${type})}"><button class="download"
+                    style="background-color: rgb(7, 96, 173); border: 1px seashell solid;"><b>Verify</b></button></a>
+        </div>
     </main>
 </body>
 
