"Updated certificate.css and certificate.html to add styles and a back to home link, and modified index.html to add a div element."

--- a/src/main/resources/templates/Certificate/certificate.html
+++ b/src/main/resources/templates/Certificate/certificate.html
@@ -34,8 +34,9 @@
             </figure>
         </div>
 
-        <div th:if="${obj.certificate_status}">
+        <div id="download-div" th:if="${obj.certificate_status}">
             <button class="download" onclick=window.print()>Download</button>
+            <a th:href="@{/}">Back To Home</a>
         </div>
 
         <div th:unless="${obj.certificate_status}">
