--- a/src/main/resources/templates/Fragments/index.html
+++ b/src/main/resources/templates/Fragments/index.html
@@ -220,6 +220,7 @@
         <a href="/">
             <i id="closeForm" class="ri-close-large-line"></i>
         </a>
+        <div id="close-form-space"></div>
         <div id="individual-course-form" class="form-wrapper">
             <form th:action="@{/add_individ}" method="post" th:object="${individ}">
                 <h1>- Individual Course -</h1>
