--- a/src/main/resources/static/CSS/certificate.css
+++ b/src/main/resources/static/CSS/certificate.css
@@ -5,7 +5,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #555;
+    /* background: #555; */
 
     .download {
         width: 20rem;
@@ -35,6 +35,7 @@ main {
     position: relative;
 
     figure {
+        box-shadow: 0 0.5rem 1rem 0.25rem rgba(0, 0, 0, 0.5);
         width: 67rem;
         height: 48rem;
         position: relative;
@@ -95,13 +96,39 @@ main {
     }
 }
 
+#download-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+    .download {
+        box-shadow: 0 0.5rem 1rem 0.1rem rgba(0, 0, 0, 0.3);
+
+        &:hover {
+            box-shadow: 0 0.5rem 1.5rem 0.1rem rgba(0, 0, 0, 0.35);
+        }
+    }
+
+    a {
+        color: #000;
+        transition: all ease 0.2s;
+        padding: 1rem 2rem;
+        border-radius: 0.5rem;
+        text-decoration: none;
+        border: 0.15rem solid currentColor;
+
+        &:hover {
+            color: #fff;
+            background: #222;
+        }
+    }
+}
+
 @media print {
     main {
-        .download {
+        #download-div {
             display: none;
         }
-
-        margin-top: -3rem;
-        font-size:large;
     }
 }
